--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   line-height: 1.5;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
 
   /* --default-padding: 0px 150px; */
 }
