--- a/src/Components/refrences.css
+++ b/src/Components/refrences.css
@@ -9,8 +9,61 @@
 }
 .refrence {
   transition-duration: 0.5s;
+  flex: 1 1 auto;
 }
 .refrence:hover {
   scale: 103%;
   cursor: pointer;
+}
+
+.scroll-parent {
+  position: relative;
+  width: 100%;
+  height: 130px;
+  overflow-x: hidden;
+  user-select: none;
+}
+
+.scroll-element {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  animation: primary 7s linear infinite;
+  display: flex;
+  gap: 25px;
+}
+.primary {
+  position: absolute;
+  overflow-x: hidden;
+  flex-wrap: nowrap;
+  animation: primary 3s linear infinite;
+  display: flex;
+  padding-top: 10px;
+}
+
+.secondary {
+  position: absolute;
+  overflow-x: hidden;
+  flex-wrap: nowrap;
+  animation: secondary 3s linear infinite;
+  display: flex;
+  padding-top: 10px;
+}
+
+@keyframes primary {
+  from {
+    left: 0%;
+  }
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes secondary {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0%;
+  }
 }
