--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   line-height: 1.5;
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
   /* background-color: #242424; */
 
