--- a/src/Components/refrences.css
+++ b/src/Components/refrences.css
@@ -1,11 +1,13 @@
 .refrencesContainer {
   backdrop-filter: blur(25px);
-  background-color: rgba(19, 19, 23, 0.4);
+  background-color: rgb(240, 240, 240);
   padding: 25px 0;
   filter: saturate(1.8);
   opacity: 0.8;
   display: flex;
   flex-wrap: wrap;
+  border-bottom: 2px solid;
+  border-top: 2px solid;
 }
 .refrence {
   transition-duration: 0.5s;
@@ -20,7 +22,7 @@
   position: relative;
   width: 100%;
   height: 130px;
-  overflow-x: hidden;
+  overflow: hidden;
   user-select: none;
 }
 
@@ -28,24 +30,24 @@
   position: absolute;
   left: 0%;
   top: 0%;
-  animation: primary 7s linear infinite;
+  animation: primary 15s linear infinite;
   display: flex;
-  gap: 25px;
+  gap: 120px;
 }
 .primary {
   position: absolute;
-  overflow-x: hidden;
+  overflow: hidden;
   flex-wrap: nowrap;
-  animation: primary 3s linear infinite;
+  animation: primary 7.5s linear infinite;
   display: flex;
   padding-top: 10px;
 }
 
 .secondary {
   position: absolute;
-  overflow-x: hidden;
+  overflow: hidden;
   flex-wrap: nowrap;
-  animation: secondary 3s linear infinite;
+  animation: secondary 7.5s linear infinite;
   display: flex;
   padding-top: 10px;
 }
