--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -44,7 +44,7 @@ textarea.ContactInput {
   flex: 1 0 0;
 }
 .contactCardIcon {
-  background-color: #05979d;
+  background-color: #1b5c4d;
   color: white;
   padding: 20px;
   border-radius: 50%;
