--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -44,7 +44,7 @@ textarea.ContactInput {
   flex: 1 0 0;
 }
 .contactCardIcon {
-  background-color: rgb(12, 132, 121);
+  background-color: rgb(19 161 148);
   color: white;
   padding: 20px;
   border-radius: 50%;
