--- a/src/Components/tanitim.css
+++ b/src/Components/tanitim.css
@@ -1,5 +1,8 @@
 .AboutPageContainer {
   height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
 }
 .aboutHeader {
   margin-bottom: 15px;
